policies/httproute-enforce-hostnames/tests/base/cr-param.yaml
apiVersion: vap-library.com/v1beta1
kind: HTTPRouteEnforceHostnamesParam
metadata:
  name: httproute-enforce-hostnames-vap-library-test
spec:
  allowedHostnames:
  - test.example.com
  - test2.example.com
