policies/httproute-enforce-hostnames/tests/base/kustomization.yaml
apiVersion: kustomize.config.k8s.io/v1beta1
kind: Kustomization
resources:
- namespace.yaml
- cr-param.yaml
- test.yaml
