policies/httproute-enforce-hostnames/tests/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: httproute-enforce-hostnames-vap-library-test
  labels:
    vap-library.com/httproute-enforce-hostnames: deny
