policies/httproute-enforce-hostnames/tests/base/test.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: httproute-example-vap-library-test
spec:
  parentRefs:
  - name: dummy
